--- a/HospitalProject/Resources/SharedResource.en-US.resx
+++ b/HospitalProject/Resources/SharedResource.en-US.resx
@@ -186,6 +186,9 @@
   <data name="settings" xml:space="preserve">
     <value>Settings</value>
   </data>
+  <data name="shift" xml:space="preserve">
+    <value>Working Hours</value>
+  </data>
   <data name="signIn" xml:space="preserve">
     <value>Sign In</value>
   </data>
